--- a/src/components/search-box/search-box.css
+++ b/src/components/search-box/search-box.css
@@ -6,4 +6,7 @@
      width: 150px;
      line-height: 30px;
      margin-bottom: 30px;
+     text-align: center;
+     justify-content: center;
+
    }
